test/libsolidity/syntaxTests/abstract/abstract_abstract.sol
abstract abstract contract A { constructor() public {} }
// ----
// ParserError: (9-17): Contract expected.
